ghc-6.2/hslibs/win32/Win32NLS_stub_ffi.h

extern DWORD prim_lOCALE_SYSTEM_DEFAULT();
extern DWORD prim_lOCALE_USER_DEFAULT();
extern DWORD prim_lOCALE_NEUTRAL();
extern DWORD prim_convertDefaultLocale(DWORD arg1);
extern UINT prim_cP_ACP();
extern UINT prim_cP_MACCP();
extern UINT prim_cP_OEMCP();
extern UINT prim_getACP();
extern void prim_setThreadLocale(DWORD arg1);
extern UINT prim_lOCALE_ICALENDARTYPE();
extern UINT prim_lOCALE_SDATE();
extern UINT prim_lOCALE_ICURRDIGITS();
extern UINT prim_lOCALE_SDECIMAL();
extern UINT prim_lOCALE_ICURRENCY();
extern UINT prim_lOCALE_SGROUPING();
extern UINT prim_lOCALE_IDIGITS();
extern UINT prim_lOCALE_SLIST();
extern UINT prim_lOCALE_IFIRSTDAYOFWEEK();
extern UINT prim_lOCALE_SLONGDATE();
extern UINT prim_lOCALE_IFIRSTWEEKOFYEAR();
extern UINT prim_lOCALE_SMONDECIMALSEP();
extern UINT prim_lOCALE_ILZERO();
extern UINT prim_lOCALE_SMONGROUPING();
extern UINT prim_lOCALE_IMEASURE();
extern UINT prim_lOCALE_SMONTHOUSANDSEP();
extern UINT prim_lOCALE_INEGCURR();
extern UINT prim_lOCALE_SNEGATIVESIGN();
extern UINT prim_lOCALE_INEGNUMBER();
extern UINT prim_lOCALE_SPOSITIVESIGN();
extern UINT prim_lOCALE_SSHORTDATE();
extern UINT prim_lOCALE_ITIME();
extern UINT prim_lOCALE_STHOUSAND();
extern UINT prim_lOCALE_S1159();
extern UINT prim_lOCALE_STIME();
extern UINT prim_lOCALE_S2359();
extern UINT prim_lOCALE_STIMEFORMAT();
extern UINT prim_lOCALE_SCURRENCY();
extern void* prim_setLocaleInfo(DWORD arg1,UINT arg2);
extern int access_prim_setLocaleInfo_gc_failed(HsPtr);
extern void* access_prim_setLocaleInfo_gc_failstring(HsPtr);
extern DWORD prim_lCMAP_BYTEREV();
extern DWORD prim_lCMAP_FULLWIDTH();
extern DWORD prim_lCMAP_HALFWIDTH();
extern DWORD prim_lCMAP_HIRAGANA();
extern DWORD prim_lCMAP_KATAKANA();
extern DWORD prim_lCMAP_LOWERCASE();
extern DWORD prim_lCMAP_SORTKEY();
extern DWORD prim_lCMAP_UPPERCASE();
extern DWORD prim_nORM_IGNORECASE();
extern DWORD prim_nORM_IGNORENONSPACE();
extern DWORD prim_nORM_IGNOREKANATYPE();
extern DWORD prim_nORM_IGNORESYMBOLS();
extern DWORD prim_nORM_IGNOREWIDTH();
extern DWORD prim_sORT_STRINGSORT();
extern DWORD prim_lCMAP_LINGUISTIC_CASING();
extern DWORD prim_lCMAP_SIMPLIFIED_CHINESE();
extern DWORD prim_lCMAP_TRADITIONAL_CHINESE();
extern void* prim_lCMapString(DWORD arg1,DWORD arg2,char * arg3,int arg3_len,int arg4);
extern char * access_prim_lCMapString_gc_res2(HsPtr);
extern int access_prim_lCMapString_gc_failed(HsPtr);
extern void* access_prim_lCMapString_gc_failstring(HsPtr);
extern DWORD prim_lCID_INSTALLED();
extern DWORD prim_lCID_SUPPORTED();
extern int prim_isValidLocale(DWORD arg1,DWORD arg2);
extern int prim_isValidCodePage(UINT arg1);
extern DWORD prim_getUserDefaultLCID();
extern WORD prim_getUserDefaultLangID();
extern DWORD prim_getThreadLocale();
extern DWORD prim_getSystemDefaultLCID();
extern WORD prim_getSystemDefaultLangID();
extern UINT prim_getOEMCP();
extern WORD prim_lANGIDFROMLCID(DWORD arg1);