ghc-6.2/hslibs/win32/Win32NLS.hs

module Win32NLS where

import StdDIS
import Addr
import Word
import Win32Types


type LCID = DWORD

foreign import  ccall unsafe "Win32NLS_stub_ffi.h prim_lOCALE_SYSTEM_DEFAULT" lOCALE_SYSTEM_DEFAULT :: LCID
foreign import  ccall unsafe "Win32NLS_stub_ffi.h prim_lOCALE_USER_DEFAULT" lOCALE_USER_DEFAULT :: LCID
foreign import  ccall unsafe "Win32NLS_stub_ffi.h prim_lOCALE_NEUTRAL" lOCALE_NEUTRAL :: LCID

foreign import  ccall unsafe "Win32NLS_stub_ffi.h prim_convertDefaultLocale" convertDefaultLocale :: LCID -> IO LCID

-- ToDo: various enum functions.

type CodePage = UINT

foreign import  ccall unsafe "Win32NLS_stub_ffi.h prim_cP_ACP" cP_ACP :: CodePage
foreign import  ccall unsafe "Win32NLS_stub_ffi.h prim_cP_MACCP" cP_MACCP :: CodePage
foreign import  ccall unsafe "Win32NLS_stub_ffi.h prim_cP_OEMCP" cP_OEMCP :: CodePage

foreign import  ccall unsafe "Win32NLS_stub_ffi.h prim_getACP" getACP :: IO CodePage

foreign import  ccall unsafe "Win32NLS_stub_ffi.h prim_setThreadLocale" setThreadLocale :: LCID -> IO ()

type LCTYPE = UINT

foreign import  ccall unsafe "Win32NLS_stub_ffi.h prim_lOCALE_ICALENDARTYPE" lOCALE_ICALENDARTYPE :: LCTYPE
foreign import  ccall unsafe "Win32NLS_stub_ffi.h prim_lOCALE_SDATE" lOCALE_SDATE :: LCTYPE
foreign import  ccall unsafe "Win32NLS_stub_ffi.h prim_lOCALE_ICURRDIGITS" lOCALE_ICURRDIGITS :: LCTYPE
foreign import  ccall unsafe "Win32NLS_stub_ffi.h prim_lOCALE_SDECIMAL" lOCALE_SDECIMAL :: LCTYPE
foreign import  ccall unsafe "Win32NLS_stub_ffi.h prim_lOCALE_ICURRENCY" lOCALE_ICURRENCY :: LCTYPE
foreign import  ccall unsafe "Win32NLS_stub_ffi.h prim_lOCALE_SGROUPING" lOCALE_SGROUPING :: LCTYPE
foreign import  ccall unsafe "Win32NLS_stub_ffi.h prim_lOCALE_IDIGITS" lOCALE_IDIGITS :: LCTYPE
foreign import  ccall unsafe "Win32NLS_stub_ffi.h prim_lOCALE_SLIST" lOCALE_SLIST :: LCTYPE
foreign import  ccall unsafe "Win32NLS_stub_ffi.h prim_lOCALE_IFIRSTDAYOFWEEK" lOCALE_IFIRSTDAYOFWEEK :: LCTYPE
foreign import  ccall unsafe "Win32NLS_stub_ffi.h prim_lOCALE_SLONGDATE" lOCALE_SLONGDATE :: LCTYPE
foreign import  ccall unsafe "Win32NLS_stub_ffi.h prim_lOCALE_IFIRSTWEEKOFYEAR" lOCALE_IFIRSTWEEKOFYEAR :: LCTYPE
foreign import  ccall unsafe "Win32NLS_stub_ffi.h prim_lOCALE_SMONDECIMALSEP" lOCALE_SMONDECIMALSEP :: LCTYPE
foreign import  ccall unsafe "Win32NLS_stub_ffi.h prim_lOCALE_ILZERO" lOCALE_ILZERO :: LCTYPE
foreign import  ccall unsafe "Win32NLS_stub_ffi.h prim_lOCALE_SMONGROUPING" lOCALE_SMONGROUPING :: LCTYPE
foreign import  ccall unsafe "Win32NLS_stub_ffi.h prim_lOCALE_IMEASURE" lOCALE_IMEASURE :: LCTYPE
foreign import  ccall unsafe "Win32NLS_stub_ffi.h prim_lOCALE_SMONTHOUSANDSEP" lOCALE_SMONTHOUSANDSEP :: LCTYPE
foreign import  ccall unsafe "Win32NLS_stub_ffi.h prim_lOCALE_INEGCURR" lOCALE_INEGCURR :: LCTYPE
foreign import  ccall unsafe "Win32NLS_stub_ffi.h prim_lOCALE_SNEGATIVESIGN" lOCALE_SNEGATIVESIGN :: LCTYPE
foreign import  ccall unsafe "Win32NLS_stub_ffi.h prim_lOCALE_INEGNUMBER" lOCALE_INEGNUMBER :: LCTYPE
foreign import  ccall unsafe "Win32NLS_stub_ffi.h prim_lOCALE_SPOSITIVESIGN" lOCALE_SPOSITIVESIGN :: LCTYPE
foreign import  ccall unsafe "Win32NLS_stub_ffi.h prim_lOCALE_SSHORTDATE" lOCALE_SSHORTDATE :: LCTYPE
foreign import  ccall unsafe "Win32NLS_stub_ffi.h prim_lOCALE_ITIME" lOCALE_ITIME :: LCTYPE
foreign import  ccall unsafe "Win32NLS_stub_ffi.h prim_lOCALE_STHOUSAND" lOCALE_STHOUSAND :: LCTYPE
foreign import  ccall unsafe "Win32NLS_stub_ffi.h prim_lOCALE_S1159" lOCALE_S1159 :: LCTYPE
foreign import  ccall unsafe "Win32NLS_stub_ffi.h prim_lOCALE_STIME" lOCALE_STIME :: LCTYPE
foreign import  ccall unsafe "Win32NLS_stub_ffi.h prim_lOCALE_S2359" lOCALE_S2359 :: LCTYPE
foreign import  ccall unsafe "Win32NLS_stub_ffi.h prim_lOCALE_STIMEFORMAT" lOCALE_STIMEFORMAT :: LCTYPE
foreign import  ccall unsafe "Win32NLS_stub_ffi.h prim_lOCALE_SCURRENCY" lOCALE_SCURRENCY :: LCTYPE

-- doesn't work too well with prim_Unicode strings coming back. ToDo: fix.

setLocaleInfo :: LCID -> LCTYPE -> IO String
setLocaleInfo arg1 arg2 =
  prim_setLocaleInfo arg1 arg2
  >>= \ gc_result ->
  access_setLocaleInfo_gc_res2 (gc_result :: Addr) >>= \ gc_res2 ->
  access_setLocaleInfo_gc_failed (gc_result :: Addr) >>= \ gc_failed ->
  access_setLocaleInfo_gc_failstring (gc_result :: Addr) >>= \ gc_failstring ->
  if ( gc_failed /= (0::Int))
  then unmarshall_string_ gc_failstring >>=  ioError  . userError
  else (unmarshall_string_ gc_res2) >>= \ gc_res1 ->
       (return (gc_res1))
foreign import  ccall unsafe "Win32NLS_stub_ffi.h prim_setLocaleInfo" prim_setLocaleInfo :: Word32 -> Word32 -> IO (Addr)
foreign import ccall unsafe "Win32NLS_stub_ffi.h access_prim_setLocaleInfo_gc_failstring" access_setLocaleInfo_gc_res2 :: Addr -> IO (Addr)
foreign import ccall unsafe "Win32NLS_stub_ffi.h access_prim_setLocaleInfo_gc_failed" access_setLocaleInfo_gc_failed :: Addr -> IO (Int)
foreign import ccall unsafe "Win32NLS_stub_ffi.h access_prim_setLocaleInfo_gc_failstring" access_setLocaleInfo_gc_failstring :: Addr -> IO (Addr)

type LCMapFlags = DWORD

foreign import  ccall unsafe "Win32NLS_stub_ffi.h prim_lCMAP_BYTEREV" lCMAP_BYTEREV :: LCMapFlags
foreign import  ccall unsafe "Win32NLS_stub_ffi.h prim_lCMAP_FULLWIDTH" lCMAP_FULLWIDTH :: LCMapFlags
foreign import  ccall unsafe "Win32NLS_stub_ffi.h prim_lCMAP_HALFWIDTH" lCMAP_HALFWIDTH :: LCMapFlags
foreign import  ccall unsafe "Win32NLS_stub_ffi.h prim_lCMAP_HIRAGANA" lCMAP_HIRAGANA :: LCMapFlags
foreign import  ccall unsafe "Win32NLS_stub_ffi.h prim_lCMAP_KATAKANA" lCMAP_KATAKANA :: LCMapFlags
foreign import  ccall unsafe "Win32NLS_stub_ffi.h prim_lCMAP_LOWERCASE" lCMAP_LOWERCASE :: LCMapFlags
foreign import  ccall unsafe "Win32NLS_stub_ffi.h prim_lCMAP_SORTKEY" lCMAP_SORTKEY :: LCMapFlags
foreign import  ccall unsafe "Win32NLS_stub_ffi.h prim_lCMAP_UPPERCASE" lCMAP_UPPERCASE :: LCMapFlags
foreign import  ccall unsafe "Win32NLS_stub_ffi.h prim_nORM_IGNORECASE" nORM_IGNORECASE :: LCMapFlags
foreign import  ccall unsafe "Win32NLS_stub_ffi.h prim_nORM_IGNORENONSPACE" nORM_IGNORENONSPACE :: LCMapFlags
foreign import  ccall unsafe "Win32NLS_stub_ffi.h prim_nORM_IGNOREKANATYPE" nORM_IGNOREKANATYPE :: LCMapFlags
foreign import  ccall unsafe "Win32NLS_stub_ffi.h prim_nORM_IGNORESYMBOLS" nORM_IGNORESYMBOLS :: LCMapFlags
foreign import  ccall unsafe "Win32NLS_stub_ffi.h prim_nORM_IGNOREWIDTH" nORM_IGNOREWIDTH :: LCMapFlags
foreign import  ccall unsafe "Win32NLS_stub_ffi.h prim_sORT_STRINGSORT" sORT_STRINGSORT :: LCMapFlags
foreign import  ccall unsafe "Win32NLS_stub_ffi.h prim_lCMAP_LINGUISTIC_CASING" lCMAP_LINGUISTIC_CASING :: LCMapFlags
foreign import  ccall unsafe "Win32NLS_stub_ffi.h prim_lCMAP_SIMPLIFIED_CHINESE" lCMAP_SIMPLIFIED_CHINESE :: LCMapFlags
foreign import  ccall unsafe "Win32NLS_stub_ffi.h prim_lCMAP_TRADITIONAL_CHINESE" lCMAP_TRADITIONAL_CHINESE :: LCMapFlags

lCMapString :: LCID -> LCMapFlags -> String -> Int -> IO String
lCMapString arg1 arg2 gc_arg1 arg4 =
  (marshall_stringLen_ gc_arg1) >>= \ (arg3,arg3_len) ->
  prim_lCMapString arg1 arg2 arg3 arg3_len arg4
  >>= \ gc_result ->
  access_lCMapString_gc_res2 (gc_result :: Addr) >>= \ gc_res2 ->
  access_lCMapString_gc_failed (gc_result :: Addr) >>= \ gc_failed ->
  access_lCMapString_gc_failstring (gc_result :: Addr) >>= \ gc_failstring ->
  if ( gc_failed /= (0::Int))
  then unmarshall_string_ gc_failstring >>=  ioError  . userError
  else (unmarshall_string_ gc_res2) >>= \ gc_res1 ->
       (return (gc_res1))
foreign import  ccall unsafe "Win32NLS_stub_ffi.h prim_lCMapString" prim_lCMapString :: Word32 -> Word32 -> Addr -> Int -> Int -> IO (Addr)
foreign import ccall unsafe "Win32NLS_stub_ffi.h access_prim_lCMapString_gc_res2" access_lCMapString_gc_res2 :: Addr -> IO (Addr)
foreign import ccall unsafe "Win32NLS_stub_ffi.h access_prim_lCMapString_gc_failed" access_lCMapString_gc_failed :: Addr -> IO (Int)
foreign import ccall unsafe "Win32NLS_stub_ffi.h access_prim_lCMapString_gc_failstring" access_lCMapString_gc_failstring :: Addr -> IO (Addr)

type LocaleTestFlags = DWORD

foreign import  ccall unsafe "Win32NLS_stub_ffi.h prim_lCID_INSTALLED" lCID_INSTALLED :: LocaleTestFlags
foreign import  ccall unsafe "Win32NLS_stub_ffi.h prim_lCID_SUPPORTED" lCID_SUPPORTED :: LocaleTestFlags

isValidLocale :: LCID -> LocaleTestFlags -> IO Bool
isValidLocale arg1 arg2 =
  prim_isValidLocale arg1 arg2
  >>= \  res1  ->
  (unmarshall_bool_ res1) >>= \ gc_res1 ->
  (return (gc_res1))
foreign import  ccall unsafe "Win32NLS_stub_ffi.h prim_isValidLocale" prim_isValidLocale :: Word32 -> Word32 -> IO (Int)

isValidCodePage :: CodePage -> IO Bool
isValidCodePage arg1 =
  prim_isValidCodePage arg1
  >>= \  res1  ->
  (unmarshall_bool_ res1) >>= \ gc_res1 ->
  (return (gc_res1))
foreign import  ccall unsafe "Win32NLS_stub_ffi.h prim_isValidCodePage" prim_isValidCodePage :: Word32 -> IO (Int)

foreign import  ccall unsafe "Win32NLS_stub_ffi.h prim_getUserDefaultLCID" getUserDefaultLCID :: LCID
foreign import  ccall unsafe "Win32NLS_stub_ffi.h prim_getUserDefaultLangID" getUserDefaultLangID :: LANGID

foreign import  ccall unsafe "Win32NLS_stub_ffi.h prim_getThreadLocale" getThreadLocale :: IO LCID
foreign import  ccall unsafe "Win32NLS_stub_ffi.h prim_getSystemDefaultLCID" getSystemDefaultLCID :: IO LCID
foreign import  ccall unsafe "Win32NLS_stub_ffi.h prim_getSystemDefaultLangID" getSystemDefaultLangID :: LANGID

foreign import  ccall unsafe "Win32NLS_stub_ffi.h prim_getOEMCP" getOEMCP :: CodePage

type LANGID = WORD

foreign import  ccall unsafe "Win32NLS_stub_ffi.h prim_lANGIDFROMLCID" lANGIDFROMLCID :: LCID -> LANGID

type SubLANGID = WORD

type PrimaryLANGID = WORD
